src/components/about/TeamSection/teamSection.module.scss
.container {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 24px;
  background-color: var(--black-color);
  background-image: url("/assets/vectors/teamSection/bg-1.svg");
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: top center;
  background-size: 50%;
  padding: 10% 16px;
  h1 {
    z-index: 2;
    text-align: center;
    font-family: Integral CF;
    font-size: 88px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    color: var(--main-text-color);
  }

  .layoutObject1 {
    position: absolute;
    left: 0;
    top: 50%;
  }
  .layoutObject2 {
    position: absolute;
    left: 10%;
    bottom: 10px;
  }
  .layoutObject4 {
    position: absolute;
    left: 40%;
    top: 30%;
  }
  .layoutObject5 {
    position: absolute;
    left: 50%;
    bottom: 20%;
  }
  .layoutObject6 {
    position: absolute;
    right: 0;
    bottom: 40%;
  }
  .tabsContainer {
    z-index: 2;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 27px;
    margin-bottom: 24px;
    .tab {
      font-family: Lexend;
      font-size: 16px;
      font-style: normal;
      font-weight: 500;
      line-height: 24px;
      color: var(--main-text-color);
      text-transform: capitalize;
      cursor: pointer;
    }
    .active {
      color: var(--main-brand-color) !important;
    }
  }

  .gridContainer {
    z-index: 2;
    width: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 20px;
    margin: 0 auto;

    .gridItem {
      position: relative;
      width: 100px;
      height: 100px;
      margin-bottom: 20px;
      cursor: pointer;

      @media screen and (min-width: 1441px) {
        width: 200px;
        height: 200px;
      }
    }
    .overlay {
      filter: grayscale(100%) brightness(150%);
    }
    .blur {
      filter: grayscale(100%) blur(4px) opacity(80%);
    }
  }

  @media screen and (max-width: 768px) {
    h1 {
      font-size: 40px;
      line-height: 48px;
    }
  }
}

